Initial commit for files

--- a/Project1.html
+++ b/Project1.html
@@ -57,8 +57,8 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
         </li>
 
         <!---->
-        <li class="item"><a href="http://localhost/projects/register.html">Registered Now</a></li>
-        <li class="item"><a href="http://localhost/projects/login.html">Login</a></li>
+        <li class="item"><a href="http://localhost:8080/projects/register.php">Registered Now</a></li>
+        <li class="item"><a href="http://localhost:8080/projects/login.php">Login</a></li>
         <li class="item"><a href="file:///C:/Users/hp/Desktop/.vscode/Frontend%20page/Projects/contact.html">Contact us</a></li>
         
         <li class="item " id="search">
@@ -166,7 +166,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
     </div> 
 </section> 
 
-  <section class="style_root">
+  <!--<section class="style_root">
     <div class="container">
         <div class="section_card">
             <h2 class="section_title">Explore our online degree programs</h2>
@@ -174,7 +174,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
                 <br>and begin an exiting educational journey</p>
         </div>
              <hr>
-    </section> 
+    </section> -->
 
 <!--Footer Section-->
  <footer class="main-footer">
